# weed-scouting-dashboard

./: AGENTS.md  README.md  app.py  export_dashboard_data.py  index.html  pyproject.toml  requirements.txt
src/: __init__.py
src/agro_ai/: __init__.py  data_processing.py  io.py  main.py  risk.py  viz_prep.py
src/agro_ai_project.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
