[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "agro-ai-project"
version = "0.1.0"
description = "Simple modular agronomy AI workflow for scouting CSV risk scoring"
readme = "README.md"
requires-python = ">=3.10"
dependencies = []

[tool.setuptools.packages.find]
where = ["src"]
